# ebp-prestashop-connector

./: LICENSE  README.md
.github/workflows/: build.yml  tests.yml
psebpconnector/: connector_configuration.py
src/: connector.spec  pyproject.toml  requirements.txt  setup.py
src/psebpconnector/: command.py  connector.py  connector_configuration.py  dummy_handler.py  mailer.py  webservice.py
src/psebpconnector/exceptions/: __init__.py  bad_http_code.py  invalid_order.py
src/psebpconnector/export_models/: __init__.py  export_order_row.py  export_product.py
src/psebpconnector/models/: __init__.py  address.py  model.py  order.py  order_printed.py  order_row.py  product.py
tests/: datasets.py  fixtures.py  test_config_files.py  test_errors_detection.py  test_mappings.py  test_orders.py
tests/samples/: currencies.csv  payment_method_mapping.csv  vat.csv
tests/samples/config/: config_file_ok.ini  config_file_ok_limit_1.ini  config_file_with_bad_syntax.ini  config_file_with_missing_keys.ini
tests/samples/logs/: ebp_malformed_message_2.txt  ebp_malformed_message_3.txt  ebp_no_order_imported.txt  ebp_order_import_ko.txt  ebp_order_import_ok.txt
